--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,12 @@
         "react-select": "^5.10.1"
     },
     "devDependencies": {
+        "@tailwindcss/cli": "^4.1.11",
+        "@tailwindcss/postcss": "^4.1.11",
         "@vitejs/plugin-react": "^4.0.3",
+        "autoprefixer": "^10.4.21",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.11",
         "vite": "^5.2.0"
     }
 }
