--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@headlessui/react": "^2.2.4",
+        "@tailwindcss/vite": "^4.1.11",
         "axios": "^1.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
