--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
     "name": "respuestapp-frontend",
     "version": "1.0.0",
+    "type": "module",
     "private": true,
     "scripts": {
         "dev": "vite",
